--- a/proposta-backend-ms/proposta-backend-ms/src/main/resources/application.properties
+++ b/proposta-backend-ms/proposta-backend-ms/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.propostapendente.exchange=proposta-pendente-ex
+rabbitmq.propostaconcluida.exchange=proposta-concluida-ex
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
