--- a/proposta-backend-ms/proposta-backend-ms/src/main/resources/application.properties
+++ b/proposta-backend-ms/proposta-backend-ms/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.propostapendente.exchange=proposta-pendente-ex
-rabbitmq.propostaconcluida.exchange=proposta-concluida-ex
+rabbitmq.propostaconcluida.exchange=proposta-concluida.ex
+rabbitmq.queue.proposta.concluida=proposta-concluida.ms-proposta
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
